hint comment fixed for admin

--- a/wp-content/themes/walnut/walnut/dev/css/less/admin.less
+++ b/wp-content/themes/walnut/walnut/dev/css/less/admin.less
@@ -388,7 +388,52 @@
 }
 
 
+// Quiz info
 
+.quiz-info{
+    margin: 20px auto;
+    text-align: left;
+    max-width: 760px;
+    .cards{
+        margin-bottom: 15px;
+        padding: 10px 15px;
+        background: #f2f2f2;
+        border-radius: 5px;
+        box-shadow: 0 0 4px 0px rgba(0, 0, 0, 0.15);
+        h2{
+            margin: 0 0 5px 0;
+            font-size: 0.95em;
+            display: inline-block;
+            i{
+                font-size: 1.2em;
+                // vertical-align: middle;
+                margin-right: 5px;
+            }
+        }
+        .data{
+            line-height: 1.5;
+            margin-left: 15px;
+            font-size: 0.9em;
+            font-weight: 300;
+        }
+    }
+    &__hint{
+        border-left: 3px solid #69b8b5;
+        i{
+            color: #69b8b5;
+        }
+    }
+    &__comment&__comment{
+        border-left: 3px solid #a2a7a2;
+        h2{
+            i{
+                font-size: 1em;
+                color: #a2a7a2;
+                vertical-align: inherit;
+            }
+        }
+    }
+}
 
 
 
