--- a/wp-content/themes/walnut/walnut/dev/css/admin.css
+++ b/wp-content/themes/walnut/walnut/dev/css/admin.css
@@ -316,4 +316,45 @@
     right: -20px;
   }
 }
+.quiz-info {
+  margin: 20px auto;
+  text-align: left;
+  max-width: 760px;
+}
+.quiz-info .cards {
+  margin-bottom: 15px;
+  padding: 10px 15px;
+  background: #f2f2f2;
+  border-radius: 5px;
+  box-shadow: 0 0 4px 0px rgba(0, 0, 0, 0.15);
+}
+.quiz-info .cards h2 {
+  margin: 0 0 5px 0;
+  font-size: 0.95em;
+  display: inline-block;
+}
+.quiz-info .cards h2 i {
+  font-size: 1.2em;
+  margin-right: 5px;
+}
+.quiz-info .cards .data {
+  line-height: 1.5;
+  margin-left: 15px;
+  font-size: 0.9em;
+  font-weight: 300;
+}
+.quiz-info__hint {
+  border-left: 3px solid #69b8b5;
+}
+.quiz-info__hint i {
+  color: #69b8b5;
+}
+.quiz-info__comment.quiz-info__comment {
+  border-left: 3px solid #a2a7a2;
+}
+.quiz-info__comment.quiz-info__comment h2 i {
+  font-size: 1em;
+  color: #a2a7a2;
+  vertical-align: inherit;
+}
 /*# sourceMappingURL=admin.css.map */
