more alignment and previous button issue resolved

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
@@ -103,7 +103,7 @@
         <div class="replay-actions">
  
         <div>
-        <button type="button" id="previous-question" class="btn btn-info"> 
+        <button type="button" id="previous-question" class="none btn btn-info"> 
              <h4>Previous</h4>
         </button>
         </div>
