--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
@@ -38,8 +38,8 @@
             {{/hint}}
 
             
-            
-            <label class="small-text text-grey db comment-label comment-active">Comment: <span class="bold">{{comment}} {{#comment_modal}}<span class="more" data-toggle="modal" data-target="#comment-modal{{commentId}}">More</span>{{/comment_modal}}</span>
+            {{#comment}}
+            <label class="small-text text-grey db comment-label comment-active">Comment: <span class="bold">{{comment}}</span>{{#comment_modal}}<span class="more" data-toggle="modal" data-target="#comment-modal{{commentId}}">...More</span>{{/comment_modal}}
                 <!-- <div class="full-comment">{{comment}}</div> -->
 
                 <!-- Modal -->
@@ -63,7 +63,7 @@
 
             </label>
           
-           
+        {{/comment}}
          
         </div>
     {{/responseStatus}}
