--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
@@ -106,10 +106,10 @@
             {{#hint}}
                 <label class="small-text text-grey db">Viewed Hint: <span class="bold">{{hint_viewed}}<span></label>
             {{/hint}}
-            {{#comment}}
+            
             
 
-            <label class="small-text text-grey db comment-label comment-active">Comment: <span class="bold">{{comment}} {{#comment_modal}}<span class="more" data-toggle="modal" data-target="#comment-modal{{commentIdAdmin}}">More</span>{{/comment_modal}}</span>
+            <label class="small-text text-grey db comment-label comment-active">Comment: <span class="bold">{{comment}}</span>{{#comment_modal}}<span class="more" data-toggle="modal" data-target="#comment-modal{{commentIdAdmin}}">More</span>{{/comment_modal}}
 
                 <!-- <div class="full-comment">{{comment}}</div> -->
 
@@ -133,7 +133,7 @@
 
 
             </label>
-            {{/comment}}
+           
         </div>
     {{/responseStatus}}
 
