--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
@@ -52,7 +52,7 @@
                         <h4 class="modal-title" id="myModalLabel">Comments</h4>
                       </div>
                       <div class="modal-body">
-                        {{comment}}
+                        {{&comment}}
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-default cancel" data-dismiss="modal">Cancel</button>
@@ -124,7 +124,7 @@
                         <h4 class="modal-title" id="myModalLabel">Comments</h4>
                       </div>
                       <div class="modal-body">
-                        {{comment}}
+                        {{&comment}}
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-default cancel" data-dismiss="modal">Cancel</button>
