removed hidden from submit button on collapse

--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
@@ -795,7 +795,7 @@
             } 
         }
         &.submit-pushed{
-            display: none;
+            // display: none;
             top: -209px;
         }
     }
