--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
@@ -100,7 +100,7 @@
                 </div>
             </div>
         </div>
-        {{#isStudentQuestion}}
+        {{#isStudentQuestion}} 
         <div class="tab-pane" id="more-tab-pane">
             <div class="row m-b-15">
                 <div class="col-sm-6">
@@ -115,7 +115,7 @@
                         <input type="checkbox" name="comment_enable" id="comment_enable">
                         <label class="form-label" for="comment_enable">Enable Comment</label>
                     </div>
-                    <textarea name="comment" id="question-comment" class="form-control" placeholder="Enter Comment" rows="4" style="display: none" disabled ></textarea>
+                    <textarea name="comment" id="question-comment" class="form-control comment-area" placeholder="Enter Comment" rows="4" style="display: none" disabled ></textarea>
                 </div>
             </div>
         </div>
