walnut logo on login page

--- a/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
@@ -24,20 +24,28 @@
                             <h4>Login to your account</h4>
                             <hr>
                             <div class="wrapper">
-                            <div class="school-username">
-                                <h5>Username :</h5>
-                                <div class="mat-holder">
-                                    <label for="username" class="mat-label">Username</label>
-                                    <input type="text" name="txtusername" id="txtusername"  class="mat-input" required>
+                                <div class="login-logo">
+                                    <div class="profile-pic">
+                                        <img src="/wp-content/themes/walnut/walnut_student_assets/dev/images/shivane.png" alt="" class="img-responsive center-block" width="100">
+                                    </div>  
                                 </div>
-                            </div>
-                            <div class="school-password">
-                                <h5>Password :</h5>
-                                <div class="mat-holder">
-                                    <label for="password" class="mat-label">Password</label>
-                                    <input name="txtpassword" id="txtpassword"  type="password" class="mat-input" required>
+                                <div class="login-details">
+                                    <div class="credential school-username">
+                                        <h5>Username :</h5>
+                                        <div class="mat-holder">
+                                            <label for="username" class="mat-label">Username</label>
+                                            <input type="text" name="txtusername" id="txtusername"  class="mat-input" required>
+                                        </div>
+                                    </div>
+                                    <div class="credential school-password">
+                                        <h5>Password :</h5>
+                                        <div class="mat-holder">
+                                            <label for="password" class="mat-label">Password</label>
+                                            <input name="txtpassword" id="txtpassword"  type="password" class="mat-input" required>
+                                        </div>
+                                    </div>  
                                 </div>
-                            </div>
+
                             </div>
                             <div class="update">
                             <a class="reset-password">Trouble logging in?</a>
