--- a/wp-content/themes/walnut/walnut/dev/css/admin.css
+++ b/wp-content/themes/walnut/walnut/dev/css/admin.css
@@ -22,6 +22,22 @@
 #content-pieces-table .tablesorter-header-inner {
   font-size: inherit;
 }
+.question-data .tablesorter-header {
+  background-image: url(../../img/bg.gif);
+  cursor: pointer;
+  font-weight: bold;
+  background-repeat: no-repeat;
+  background-position: center right;
+  padding-left: 20px;
+  border-right: 1px solid #dad9c7;
+  margin-left: -1px;
+}
+.question-data .tablesorter-header.tablesorter-headerAsc {
+  background-image: url(../../img/asc.gif);
+}
+.question-data .tablesorter-header.tablesorter-headerDesc {
+  background-image: url(../../img/desc.gif);
+}
 .table .checkbox label:after {
   left: 1px;
 }
