question analysis page updated with select 2

--- a/wp-content/themes/walnut/walnut/dev/css/less/admin.less
+++ b/wp-content/themes/walnut/walnut/dev/css/less/admin.less
@@ -343,7 +343,7 @@
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  & > div{
+  .js-select{
       flex: 1;
       padding-right: 10px;
       input[type='text']{
