--- a/wp-content/themes/walnut/walnut/dev/css/admin.css
+++ b/wp-content/themes/walnut/walnut/dev/css/admin.css
@@ -265,14 +265,14 @@
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
 }
-.question-filter > div {
+.question-filter .js-select {
   -webkit-box-flex: 1;
   -webkit-flex: 1;
       -ms-flex: 1;
           flex: 1;
   padding-right: 10px;
 }
-.question-filter > div input[type='text'] {
+.question-filter .js-select input[type='text'] {
   width: 100%;
   font-weight: 400;
   font-size: 0.75em;
