--- a/wp-content/themes/walnut/walnut/dev/css/less/admin.less
+++ b/wp-content/themes/walnut/walnut/dev/css/less/admin.less
@@ -72,6 +72,9 @@
       background-image: url(../../img/desc.gif); 
       // background-color: #3399FF;
     }
+    &.sorter-false{
+      background-image: none;
+    }
   }
 }
 
