content piece page added

--- a/wp-content/themes/walnut/walnut/dev/css/less/admin.less
+++ b/wp-content/themes/walnut/walnut/dev/css/less/admin.less
@@ -463,3 +463,63 @@
 
 
 
+// content piece data
+
+
+// .content-piece__details{
+//     background-color: #e5e9ec;
+//     padding: 15px 0;
+//     margin-bottom: 20px;
+//     display: flex;
+//     align-items: center;
+//     justify-content: flex-start;
+//     flex-wrap: wrap;
+//     width: 100%;
+//     .info{
+//         flex: 1 0 calc(~'25% - 10px');
+//         max-width: calc(~'25% - 10px');
+//         background-color: #fff;
+//         margin: 5px 10px 10px 0;
+//         label{
+//             margin-bottom: 0;
+//             padding: 10px 8px;
+//             font-weight: 300;
+//             border-left: 3px solid #0090d9;
+//         }
+//         &:last-child{
+//           max-width: 28%;
+//           margin-bottom: 0;
+//         }
+//     }
+// }
+
+  .content-piece__details{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+      .info{
+        margin-right: 15px;
+        label{
+        background-color: #fff;
+        padding: 8px 0 8px 8px;
+        margin-bottom: 20px;
+        box-shadow: 1px 1px 5px 0px rgba(8, 8, 8, 0.27);
+        b{
+        	background-color: #0090d9;
+    			color: #fff;
+    			padding: 8px;
+    			font-size: 0.95em;
+    			font-weight: 400;
+    			text-shadow: 0px 1px 2px #000;
+        }
+      }
+    }
+  }
+
+
+
+
+
+
+
+
