check submit or autosave

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
@@ -32,7 +32,7 @@
         </button>
         {{/show_hint}}
         {{#show_skip}}
-            <button type="button" id="skip-question" class="btn btn-default btn-sm btn-small">
+            <button type="button" id="skip-question" class="btn btn-default btn-sm btn-small skip-button">
                 Skip <i class="fa fa-step-forward"></i>
             </button>
         {{/show_skip}}
@@ -51,7 +51,7 @@
     <span class="hide errorSubmitMsg alert-error">We're sorry! The server encountered some error and your answer was not submitted. Please submit again.</span>
   
         {{#show_skip}}
-            <button type="button" id="skip-question" class="btn btn-default btn-sm btn-small">
+            <button type="button" id="skip-question" class="btn btn-default btn-sm btn-small skip-button">
                 Skip <i class="fa fa-step-forward"></i>
             </button>
         {{/show_skip}}
