--- a/wp-content/themes/walnut/walnut/dev/css/less/admin.less
+++ b/wp-content/themes/walnut/walnut/dev/css/less/admin.less
@@ -97,6 +97,14 @@
 
 
 
+
+.teacher-app{
+  max-width: 100%;
+}
+
+
+
+
 /* ---------------------------
    ADMIN LABEL DESIGN FIX -----------
  ---------------------------
