error text aligned to left

--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
@@ -900,7 +900,7 @@
 
 .errorSubmitMsg{
     margin-bottom: 15px;
-    text-align: center;
+    text-align: left;
     padding: 5px;
     font-size: 1.3em;
 }
