--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
@@ -110,7 +110,7 @@
                     </div>
                     <textarea name="hint" id="question-hint" class="form-control" rows="4" placeholder="Enter Hint" style="display: none" disabled></textarea>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-6 comment-rte">
                     <div class="checkbox check-info">
                         <input type="checkbox" name="comment_enable" id="comment_enable">
                         <label class="form-label" for="comment_enable">Enable Comment</label>
