--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
@@ -40,7 +40,7 @@
 
             
             {{#comment}}
-            <label class="small-text text-grey db comment-label comment-active">Comment: <span class="bold">{{comment}}</span>{{#comment_modal}}<span class="more" data-toggle="modal" data-target="#comment-modal{{commentId}}">...More</span>{{/comment_modal}}
+            <label class="small-text text-grey db comment-label comment-active">Comment: <span class="bold">{{&comment}}</span>{{#comment_modal}}<span class="more" data-toggle="modal" data-target="#comment-modal{{commentId}}">...More</span>{{/comment_modal}}
                 <!-- <div class="full-comment">{{comment}}</div> -->
 
                 <!-- Modal -->
@@ -111,7 +111,7 @@
             {{#comment}}
             
 
-            <label class="small-text text-grey db comment-label comment-active">Comment: <span class="bold">{{comment}}</span>{{#comment_modal}}<span class="more" data-toggle="modal" data-target="#comment-modal{{commentIdAdmin}}">...More</span>{{/comment_modal}}
+            <label class="small-text text-grey db comment-label comment-active">Comment: <span class="bold">{{&comment}}</span>{{#comment_modal}}<span class="more" data-toggle="modal" data-target="#comment-modal{{commentIdAdmin}}">...More</span>{{/comment_modal}}
 
                 <!-- <div class="full-comment">{{comment}}</div> -->
 
