add content pieces to quiz..count sent and check made

--- a/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/content-selection/templates/content-selection.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/content-selection/templates/content-selection.html
@@ -39,5 +39,6 @@
             </select>
         </div>
     </div>
-    <button type="button" class="btn btn-success btn-cons2 right m-t-20" id="add-content-pieces"> <i class="fa fa-plus"></i> Add</button>
+    <button type="button" class="btn btn-success btn-cons2 right m-t-20" id="add-content-pieces"> <i class="fa fa-plus"></i> Add</button> <span id="add_content_help_text" class=""></span>
+
 </div>
