add question to quiz success message aligned.

--- a/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/content-selection/templates/content-selection.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/content-selection/templates/content-selection.html
@@ -39,6 +39,7 @@
             </select>
         </div>
     </div>
-    <button type="button" class="btn btn-success btn-cons2 right m-t-20" id="add-content-pieces"> <i class="fa fa-plus"></i> Add</button> <span id="add_content_help_text" class=""></span>
+    <button type="button" class="btn btn-success btn-cons2 right m-t-20" id="add-content-pieces"> <i class="fa fa-plus"></i> Add</button> 
+    <div id="add_content_help_text" class="m-t-15" style="font-size: 0.87em;"></div>
 
 </div>
