comment and hint html structured.

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
@@ -101,21 +101,21 @@
             </div>
         </div>
         {{#isStudentQuestion}} 
-        <div class="tab-pane" id="more-tab-pane">
+        <div class="tab-pane input-data" id="more-tab-pane">
             <div class="row m-b-15">
                 <div class="col-sm-6">
-                    <div class="checkbox check-info">
+                    <div class="checkbox check-info inline">
                         <input type="checkbox" name="hint_enable" id="hint_enable">
                         <label class="form-label" for="hint_enable">Enable Hint</label>
                     </div>
                     <textarea name="hint" id="question-hint" class="form-control" rows="4" placeholder="Enter Hint" style="display: none" disabled></textarea>
                 </div>
                 <div class="col-sm-6 comment-rte">
-                    <div class="checkbox check-info">
+                    <div class="checkbox check-info inline">
                         <input type="checkbox" name="comment_enable" id="comment_enable">
                         <label class="form-label" for="comment_enable">Enable Comment</label>
+                        <textarea name="comment" commenteditable="false" id="question-comment" class="form-control comment-area" placeholder="Enter Comment" rows="4" style="display: none" disabled ></textarea>
                     </div>
-                    <textarea name="comment" commenteditable="false" id="question-comment" class="form-control comment-area" placeholder="Enter Comment" rows="4" style="display: none" disabled ></textarea>
                 </div>
             </div>
         </div>
