ob_end_clean();

--- a/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
@@ -1,3 +1,4 @@
+    <div class="create-ac-wrapper">
 <link rel="stylesheet" href="./wp-content/themes/walnut/walnut_student_assets/dev/css/bootstrap.min.css">
 <link rel="stylesheet" href="./wp-content/themes/walnut/walnut_student_assets/dev/css/style.css">
 <link rel="stylesheet" href="./wp-content/themes/walnut/walnut_student_assets/dev/css/font-awesome.min.css">
