hint comment textarea styled.

--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/style.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/style.less
@@ -88,3 +88,9 @@
 // ---------------------------
 @import '_quiz-summary';
 
+
+// ---------------------------
+// MISCELLANEOUS STYLES -----------
+// ---------------------------
+@import '_misc';
+
