excel button UI fixed

--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-summary.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-summary.less
@@ -110,9 +110,10 @@
 		            }
 	             }
 	             .qstnStatus{
-	             	right: -64px;
+	             	right: -80px;
 	             	text-align: center;
 	             	line-height: 40px;
+	             	width: 200px;
 	             	@media @i-tab-landscape{
 						right: -100px;
 	             	}
