--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -3416,9 +3416,10 @@ lesshat-selector {
   }
 }
 #myCanvas-miki .cbp_tmtimeline > li .contentPiece .qstnStatus {
-  right: -64px;
+  right: -80px;
   text-align: center;
   line-height: 40px;
+  width: 200px;
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
   #myCanvas-miki .cbp_tmtimeline > li .contentPiece .qstnStatus {
