--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-summary.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-summary.less
@@ -1,4 +1,3 @@
-
  //   ____        _        _____                                            
  //  / __ \      (_)      / ____|                                           
  // | |  | |_   _ _ ____ | (___  _   _ _ __ ___  _ __ ___   __ _ _ __ _   _ 
@@ -173,16 +172,25 @@
 					    -webkit-box-orient: vertical;
 					    overflow: hidden;
 					    text-overflow: ellipsis;
+					    .more{
+					    	display: none;
+					    }
 					    &.comment-active{
-						    &:hover{
-						    	.full-comment{
-						    		opacity: 1;
-						    		transform: translate(0,0);
-						    	}
-						    }
-						    &:after{
-						    	content: '';
-						    	display: inline-block;						    	
+					    	.full-comment{
+					    		&.is-shown{
+					    			opacity: 1;
+					    			transform: translate(0,0);
+					    		}
+					    	}
+						    .more{
+						    	display: block;
+						    	position: absolute;
+							    bottom: 4px;
+							    right: 0;
+							    color: #f2593a;
+							    box-shadow: 1px 18px 2px 16px rgba(255, 255, 255, 0.77);
+							    background-color: #fff;
+							    cursor: pointer;
 						    }					    	
 					    }
 	             	}	             	
