--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
@@ -1,4 +1,4 @@
- //  _____                _   _             ____        _     
+//  _____                _   _             ____        _     
  // |  __ \              | | (_)           / __ \      (_)    
  // | |__) | __ __ _  ___| |_ _  ___ ___  | |  | |_   _ _ ____
  // |  ___/ '__/ _` |/ __| __| |/ __/ _ \ | |  | | | | | |_  /
@@ -18,7 +18,7 @@
  // ---------------------------
 
 .quizComment,.admin-side{
-	display: none;
+    display: none;
 }
 
 
@@ -28,7 +28,7 @@
 
 
 .sidebarContainer{
-	@media (max-width: 1200px){
+    @media (max-width: 1200px){
         position: static;
         float:none;
     }
@@ -209,6 +209,9 @@
         width:260px;
         z-index: 1;
         .transition-duration(0.3s);
+        @media @desktop-xl {
+            width: 300px;
+        }
         @media @desktop-def {
             top: 35px;
         }
@@ -217,6 +220,9 @@
         }
         &.progress-expand{
             left: -260px;
+            @media @desktop-xl {
+                left: -300px;
+            }
             @media (max-width: 1230px) {
                 left: 0;
             }
@@ -240,6 +246,9 @@
             background: #868686;
             cursor: pointer;
             .transition-duration(0.3s);
+            @media @desktop-xl {
+                left: 300px;
+            }
             @media @desktop-def {
                 top: 35px;
             }            
@@ -436,7 +445,7 @@
  // ---------------------------
 
  .timerBox {
- 	background: #f3f3f3;
+    background: #f3f3f3;
     visibility: hidden;
     .box-shadow(#dadada 0 0 0 3px);
     @media (max-width: 1200px){
@@ -449,8 +458,8 @@
         box-shadow: none;
     }
     .container-grey{
-    	background: none;
-    	box-shadow: none;
+        background: none;
+        box-shadow: none;
         @media (max-width:1230px){
              position: fixed;
             width: 100%;
@@ -542,8 +551,8 @@
         }
     }
     .small-text{
-    	padding: 10px 0;
-    	border-bottom: 1px solid #dadada;
+        padding: 10px 0;
+        border-bottom: 1px solid #dadada;
     }
      .endQuiz {
         visibility: visible;
@@ -564,7 +573,7 @@
              color: @color-white;
              padding: 12px 28px;
              &:hover{
-             	background: lighten(@quiz-link-color3, 10%);
+                background: lighten(@quiz-link-color3, 10%);
              }
          }
      }
@@ -681,57 +690,57 @@
  
  
  .quizActions{
- 	background: none;
+    background: none;
     box-shadow: none;
     text-align: right;
     max-width: 100%;
     #previous-question,#next-question{
-    	// display: none !important;
+        // display: none !important;
     }
     button{
-	    border: 0;
-	    width: 25%;
-	    padding: 13px 0;
-	    font-weight: bold;
-	    font-size: 1.1em;
-    	line-height: 1.5;
+        border: 0;
+        width: 25%;
+        padding: 13px 0;
+        font-weight: bold;
+        font-size: 1.1em;
+        line-height: 1.5;
         border-radius: 8px;
         @media @desktop-def {
            width: 18%;  
            padding: 10px 0;                  
         }         
-	    i{
-	    	&:before{
-	    		padding-left: 5px;
-	    	}
-	    }
+        i{
+            &:before{
+                padding-left: 5px;
+            }
+        }
     }
     #submit-question{
-    	background: #FF8685;
+        background: #FF8685;
         @media @desktop-def {
             border:2px solid #ff8685;
         }         
-    	&:hover{
-    		background: lighten(#FF8685, 10%);
-    	}
-    	i{
-    		&:before{
-    			content: "\f00c";
-    		}
-    	}
+        &:hover{
+            background: lighten(#FF8685, 10%);
+        }
+        i{
+            &:before{
+                content: "\f00c";
+            }
+        }
     }
     #skip-question{
         background: transparent;
         color: #AFABAB;
         border: 2px solid #AFABAB;
-    	&:hover{
-    		background: darken(@color-white, 10%);
-    	}
-    	i{
-    		&:before{
-    			content: "\f04e";
-    		}
-    	}
+        &:hover{
+            background: darken(@color-white, 10%);
+        }
+        i{
+            &:before{
+                content: "\f04e";
+            }
+        }
     }
     .submit2{
         position: absolute;
