show more comment styled

--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -3536,12 +3536,12 @@ lesshat-selector {
 #myCanvas-miki .cbp_tmtimeline > li .contentPiece .qstnStatus .comment-label.comment-active .more {
   display: block;
   position: absolute;
-  bottom: 4px;
-  right: 0;
+  bottom: 5px;
+  right: -28px;
   color: #f2593a;
-  box-shadow: 1px 18px 2px 16px rgba(255, 255, 255, 0.77);
   background-color: #fff;
   cursor: pointer;
+  font-size: 0.85em;
 }
 #myCanvas-miki .cbp_tmtimeline > li .contentPiece .text-warning i:before {
   content: "\f0a9";
