--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
@@ -690,10 +690,12 @@
  
  
  .quizActions{
-    background: none;
+    // background: none;
+    background-color: #fff;
     box-shadow: none;
     text-align: right;
     max-width: 100%;
+    margin-top: 8px;
     #previous-question,#next-question{
         // display: none !important;
     }
