submit button background-color differ issue fixed.

--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -3308,6 +3308,9 @@ lesshat-selector {
 .quizActions #submit-question i:before {
   content: "\f00c";
 }
+.quizActions #submit-question.bottom-submit {
+  background: #f96649 !important;
+}
 .quizActions #skip-question {
   background: transparent;
   color: #AFABAB;
