--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
@@ -731,6 +731,9 @@
             }
         }
     }
+    #submit-question.bottom-submit{
+        background: #f96649 !important;
+    }
     #skip-question{
         background: transparent;
         color: #AFABAB;
