--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_lecture-training.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_lecture-training.less
@@ -1,4 +1,4 @@
- //  _               _                    _______        _       _             
+//  _               _                    _______        _       _             
  // | |             | |                  |__   __|      (_)     (_)            
  // | |     ___  ___| |_ _   _ _ __ ___     | |_ __ __ _ _ _ __  _ _ __   __ _ 
  // | |    / _ \/ __| __| | | | '__/ _ \    | | '__/ _` | | '_ \| | '_ \ / _` |
@@ -194,12 +194,16 @@
                  }
              }
              .cbp_tmlabel {
-                 margin: 0 0 55px 25%;
+                 margin: 0 0 55px 27%;
                  & > div:first-child {
                      .box-shadow(0 0px 0px 0 rgba(0, 0, 0, 0.12), 0 4px 2px 0 rgba(0, 0, 0, 0.12));
                      border: 1px solid #ccc;
                      padding: 25px;
-                     width: 80%;
+                     // width: 80%;
+                     width: 70%;
+                     @media screen and (min-width: 1350px) and (max-width: 1400px) {
+                        width: 75%;
+                     }
                      @media @i-tab-landscape {
                          width: 85%;
                      }
